--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
+<html>
+<head>
+    <link rel="favicon" href="http://images.clipartpanda.com/police-clip-art-1194984609285255522police_man_ganson.svg.med.png" />
+</head>
+<body>
+  
 
 <h1>Bitbucket Commit Police</h1>
 
 drag <strong>the bitbucket commit police bookmarklet link: <a title="commit police" href="javascript:(function(){document.body.appendChild(document.createElement('script')).src='//gion.github.io/bitbucket-commit-police/commit-police.js';})();" style="background:url(http://images.clipartpanda.com/police-clip-art-1194984609285255522police_man_ganson.svg.med.png) no-repeat center;background-size: contain;width: 100px;height: 100px;display:block;">&nbsp;</a> 
 </strong>
 to your bookmarks bar and click it while you're vieweing the commits on bitbucket!
-
+</body>
+</html>
